# myoptional

./: .clang-format  .gitmodules  CMakeLists.txt  Doxyfile  README.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  classmyoptional-members.html  classmyoptional.html  classmyoptional.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_enum.html  graph_legend.html  index.html  menudata.js  myoptional_8h.html  myoptional_8h.js  myoptional_8h__incl.map  myoptional_8h__incl.md5  myoptional_8h_source.html  navtreedata.js  navtreeindex0.js
.github/workflows/: buil.yml
include/: myoptional.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  typedefs_0.js  variables_0.js
test/: CMakeLists.txt  myoptional_test.cpp
